--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,12 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/*
+.idea/misc.xml
+.idea/compiler.xml
+.idea/jarRepositories.xml
+.idea/uiDesigner.xml
+.idea/vcs.xml
+.idea/workspace.xml
 *.iws
 *.iml
 *.ipr
